--- a/src/main/resources/static/api-tester.html
+++ b/src/main/resources/static/api-tester.html
@@ -472,7 +472,7 @@
                                     <option value="officialMemo">บันทึกข้อความ (ครบทุกรูปแบบ)</option>
                                     <option value="officialDocument">หนังสือส่งออก (ครบทุกรูปแบบ)</option>
                                     <option value="officialDocumentHtml">📊 หนังสือส่งออก + HTML Table</option>
-                                    <option value="seal">หนังสือประทับตรา (ครบทุกรูปแบบ)</option>
+                                    <option value="stamp">หนังสือประทับตรา (ครบทุกรูปแบบ)</option>
                                     <option value="ministry">หนังสือภายใต้กระทรวง (ครบทุกรูปแบบ)</option>
                                     <option value="regulation">หนังสือระเบียบ</option>
                                     <option value="announce">หนังสือประกาศ</option>
@@ -555,7 +555,7 @@
                 announce: "23065068-BB18-49EA-8CE7-22945E16CB6D", // หนังสือประกาศ
                 command: "3FEDE42B-078A-4D2C-9B21-3EAD3E418F3D", // หนังสือคำสั่ง
                 rules: "4AB1EC00-9E5E-4113-B577-D8ED46BA7728", // หนังสือข้อบังคับ
-                seal: "AF3E7697-6F7E-4AD8-B76C-E2134DB98747", // หนังสือประทับตรา
+                stamp: "AF3E7697-6F7E-4AD8-B76C-E2134DB98747", // หนังสือประทับตรา
                 ministry: "4B3EB169-6203-4A71-A3BD-A442FEAAA91F", // หนังสือภายใต้กระทรวง
             };
 
@@ -980,8 +980,8 @@
                     // ผู้เรียน/รับทราบ - 1 คน
                     bookLearner: [{ relatedNo: "1", prefixName: "นาย", firstname: "สมชาย", lastname: "ใจดี", positionName: "หัวหน้างานพัฒนา", departmentName: "กองพัฒนาระบบบริการ", email: "somchai@etda.or.th" }],
                 },
-                seal: {
-                    bookNameId: BOOK_NAME_IDS.seal,
+                stamp: {
+                    bookNameId: BOOK_NAME_IDS.stamp,
                     formatPdf: "A4",
                     // documentMain สำหรับ memo แนบท้าย
                     documentMain: {
